# assignment

./: .clangd  .cursorignore  .gitignore  123.py  README.md  architecture.md  export_to_csv.py  personal.md
docs/: SETUP_MICROSERVICES.md  SETUP_SERVER.md  SETUP_SRC.md
graph/code/: system.puml
history_version/docs/: SETUP_MICROSERVICES.md  SETUP_SERVER.md  SETUP_SRC.md
history_version/microservices/: start-docker.sh
history_version/microservices/python-server/static/: index.html
history_version/microservices/receiver-microservice/: CMakeLists.txt  Dockerfile
history_version/microservices/receiver-microservice/include/: ring_buffer.hpp
history_version/microservices/sender-microservice/: CMakeLists.txt
history_version/microservices/sender-microservice/src/: tcp_sender.cpp  utils.cpp
history_version/others/: inspect_data.cpp
history_version/others/streamer_example/: CMakeLists.txt  sender_main.cpp
history_version/server/: README.md  main.py
history_version/server/include/: order_book.hpp
history_version/server/src/: tcp_receiver.cpp  tcp_sender.cpp  utils.cpp
history_version/src/: design.puml
history_version/src/config/: config.ini
history_version/src/include/project/: tcp_receiver.hpp  tcp_sender.hpp
history_version/src/src/: CMakeLists.txt  config.cpp  tcp_receiver.cpp
microservices/: README.md  docker-compose.yml  start-docker.sh
microservices/python-server/: Dockerfile  main.py
microservices/receiver-microservice/: CMakeLists.txt  receiver_microservice.cpp
microservices/receiver-microservice/include/: order_book.hpp  tcp_receiver.hpp
microservices/receiver-microservice/src/: tcp_receiver.cpp
microservices/sender-microservice/: CMakeLists.txt  Dockerfile
microservices/sender-microservice/include/: message_types.hpp  tcp_receiver.hpp  trade.hpp
microservices/sender-microservice/src/: receiver_main.cpp  sender_main.cpp  tcp_receiver.cpp
others/: eda.ipynb  eda_2.py
others/streamer_example/: receiver_main.cpp
server/: CMakeLists.txt  PIPELINE_ANALYSIS.md  README.md  main.py  receiver_microservice.cpp  sender_microservice.cpp  start.sh
server/apps/: CMakeLists.txt  main.cpp
server/config/: config.ini
server/db/: README.md
server/db/schema/: clickhouse_schema.sql  schema.sql
server/include/: tcp_receiver.hpp  tcp_sender.hpp
server/include/core/: persistence_manager.hpp  processing_manager.hpp  server.hpp
server/include/database/: clickhouse_connection.hpp  database_writer.hpp  json_generator.hpp  postgres_connection.hpp
server/include/project/: book_snapshot.hpp  config.hpp  order_book.hpp  ring_buffer.hpp  server.hpp  streamer.hpp  streaming_readable.hpp  utils.hpp
server/include/util/: order_book.hpp  ring_buffer.hpp  utils.hpp
server/scripts/: start.sh
server/src/: CMakeLists.txt  receiver_main.cpp  streamer.cpp  tcp_receiver.cpp  tcp_sender.cpp
server/src/core/: config.cpp  persistence_manager.cpp  processing_manager.cpp  server.cpp  streaming_readable.cpp  utils.cpp
server/src/database/: clickhouse_connection.cpp  database_writer.cpp  json_generator.cpp  postgres_connection.cpp
server/src/streamer/: streamer.cpp
server/src/util/: order_book.cpp  ring_buffer.cpp  streamer.cpp  utils.cpp
server/static/: index.html
src/: CMakeLists.txt  README.md  config.ini  start.sh
src/apps/: CMakeLists.txt  receiver_main.cpp  sender_main.cpp
src/config/: config.ini
src/include/: RingBuffer.hpp  config.hpp  message_types.hpp  order.hpp  order_book.hpp  queue_sender.hpp  ring_buffer.hpp  streamer.hpp  tcp_receiver.hpp  tcp_sender.hpp
src/include/project/: json_writer.hpp  order_book.hpp  tcp_receiver.hpp  tcp_sender.hpp
src/scripts/: start.sh
src/src/: CMakeLists.txt  config.cpp  json_writer.cpp  main.cpp  queue_sender.cpp  receiver_main.cpp  sender_main.cpp  streamer.cpp  tcp_receiver.cpp  tcp_sender.cpp  utils.cpp
streamer/: README.md  receiver_main.cpp  sender_main.cpp  tcp_receiver.cpp  tcp_sender.cpp  tcp_sender.hpp
streamer_example/: README.md  sender_main.cpp  tcp_receiver.cpp  tcp_sender.hpp
test/: CMakeLists.txt  inspect_data.cpp
test/streamer_example/: tcp_receiver.hpp  tcp_sender.cpp
